tests/core/ill-typed/not-a-function/applying-non-function-2.stella
language core;

fn main(n : Nat) -> Nat {
  return succ(n)(n);
}